# fluvarium

./: .gitignore  CLAUDE.md  Cargo.toml  PRD.md  PROGRESS.md  README.md  REVIEW-fluid-simulation.md  fluvarium.yaml.example
Formula/: fludarium.rb
src/: config.rs  input.rs  iterm2.rs  main.rs  overlay.rs  physics.rs  playback.rs  renderer.rs  sixel.rs  solver.rs  spgrid.rs  spherical.rs  state.rs
src/renderer/: color.rs  font.rs  mod.rs  spherical.rs
src/solver/: boundary.rs  cavity.rs  core.rs  diagnostics.rs  karman.rs  mod.rs  params.rs  thermal.rs
