[package]
name = "fludarium"
version = "0.1.0"
edition = "2024"
authors = ["daktu32"]
description = "Real-time fluid dynamics visualizer — Rayleigh-Bénard convection & Kármán vortex street"
license = "MIT"
repository = "https://github.com/daktu32/fludarium"
keywords = ["fluid-dynamics", "cfd", "simulation", "visualization"]
categories = ["simulation", "visualization"]

[dependencies]
ctrlc = "3.4"
minifb = "0.28.0"
png = "0.17"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
